Refactored Generic Comparator and generic comparison result