@@ -1,16 +1,16 @@
 package com.example.exercise2.utils.comparators;
 
 import com.example.exercise2.dto.ActorDto;
-import com.example.exercise2.dto.BasicDto;
-import com.example.exercise2.dto.comparisonResults.ActorComparisonResult;
+import com.example.exercise2.dto.GenericDto;
 import com.example.exercise2.dto.comparisonResults.BasicComparisonResult;
 import org.springframework.stereotype.Component;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.util.List;
 
 @Component
-public class GenericComparator<T> {
+public class GenericComparator<T extends GenericDto> {
     public boolean compareLists(List<ActorDto> actorsNeo4j, List<ActorDto> actorsSql) {
         if (actorsNeo4j.size() == actorsSql.size()) {
             return actorsSql.containsAll(actorsNeo4j);
@@ -18,8 +18,8 @@ public class GenericComparator<T> {
         return false;
     }
 
-    public <T extends BasicDto, G extends BasicComparisonResult> G getActorsDifference(List<T> neo4jDtos, List<T> sqlDtos) throws InstantiationException, IllegalAccessException {
-        G result = ((Class<G>) ((ParameterizedType) this.getClass().getGenericSuperclass()).getActualTypeArguments()[1]).newInstance();
+    public <G extends BasicComparisonResult<T>> G getDtoDifference(List<T> neo4jDtos, List<T> sqlDtos) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+        G result = ((Class<G>) ((ParameterizedType) this.getClass().getGenericSuperclass()).getActualTypeArguments()[1]).getDeclaredConstructor().newInstance();
         for (T m1 : neo4jDtos) {
             if (!sqlDtos.contains(m1)) {
                 result.getNeo4j().add(m1);
@@ -38,4 +38,5 @@ public class GenericComparator<T> {
         }
         return result;
     }
+
 }
